--- a/jogo_de_naves/index.html
+++ b/jogo_de_naves/index.html
@@ -9,12 +9,15 @@
 <body>
     <div id="container">
         <div id="fundoGame">
-            <div id="inicio">
+            <div id="inicio" onclick="start()">
                 <h1>Resgate</h1>
                 <p>Utilize a tecla W para movimentar o helicóptero para cima, a tecla S para movimentar para baixo e a tecla D para atirar</p>
                 <p>Clique aqui para iniciar!</p>
             </div>
         </div>
     </div>
+    <script src="js/jquery-1.11.1.min.js"></script>
+    <script src="js/jquery-collision.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
